template/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: name-pod
specs:
  container: 
    - name: name-containers
      image: name-image
      ports:
        - containerPort: 80
