template/service-with-ingress.yaml
apiVersion: nerworking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: name-service
  labels:
    label-key1: label-value1
spec:
  rules:
    - host: sub.domain.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service-name
              servicePort: 80
